--- a/src/app/sanpham/sanpham.component.html
+++ b/src/app/sanpham/sanpham.component.html
@@ -1,1 +1,18 @@
-<p>sanpham works!</p>
+<div class="breadcrumbs_area">
+    <div class="container">   
+        <div class="row">
+            <div class="col-12">
+                <div class="breadcrumb_content">
+                    <ul>
+                        <li><a routerLink="">home</a></li>
+                        <li>shop</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>         
+</div>
+<!--breadcrumbs area end-->
+
+<!--shop  area start-->
+<router-outlet></router-outlet>
