--- a/src/app/giohang/giohang.component.html
+++ b/src/app/giohang/giohang.component.html
@@ -4,8 +4,8 @@
             <div class="col-12">
                 <div class="breadcrumb_content">
                     <ul>
-                        <li><a href="index.html">home</a></li>
-                        <li>Shopping Cart</li>
+                        <li><a href="index.html">Home</a></li>
+                        <li>Giỏ Hàng</li>
                     </ul>
                 </div>
             </div>
@@ -35,27 +35,8 @@
                                             </tr>
                                         </thead>
                                         <tbody>
-                                            <tr>
-                                               <td class="product_remove"><a href="#"><i class="fa fa-trash-o"></i></a></td>
-                                                <td class="product_thumb"><a href="#"><img src="assets/img/s-product/product.jpg" alt=""></a></td>
-                                                <td class="product_name"><a href="#">Handbag fringilla</a></td>
-                                                <td class="product-price">£65.00</td>
-                                                <td class="product_quantity"><label>Quantity</label> <input min="1" max="100" value="1" type="number"></td>
-                                                <td class="product_total">£130.00</td>
 
 
-                                            </tr>
-
-                                            <tr>
-                                               <td class="product_remove"><a href="#"><i class="fa fa-trash-o"></i></a></td>
-                                                <td class="product_thumb"><a href="#"><img src="assets/img/s-product/product2.jpg" alt=""></a></td>
-                                                <td class="product_name"><a href="#">Handbags justo</a></td>
-                                                <td class="product-price">£90.00</td>
-                                                <td class="product_quantity"><label>Quantity</label> <input min="1" max="100" value="1" type="number"></td>
-                                                <td class="product_total">£180.00</td>
-
-
-                                            </tr>
                                             <tr>
                                                <td class="product_remove"><a href="#"><i class="fa fa-trash-o"></i></a></td>
                                                 <td class="product_thumb"><a href="#"><img src="assets/img/s-product/product3.jpg" alt=""></a></td>
