--- a/src/app/dangnhapdangky/dangnhapdangky.component.html
+++ b/src/app/dangnhapdangky/dangnhapdangky.component.html
@@ -5,7 +5,7 @@
                 <div class="breadcrumb_content">
                     <ul>
                         <li><a href="index.html">home</a></li>
-                        <li>My account</li>
+                        <li>Tài khoản</li>
                     </ul>
                 </div>
             </div>
@@ -22,23 +22,23 @@
                <!--login area start-->
                 <div class="col-lg-6 col-md-6">
                     <div class="account_form login">
-                        <h2>login</h2>
+                        <h2>Đăng nhập</h2>
                         <form action="#">
                             <p>   
-                                <label>Username or email <span>*</span></label>
+                                <label>Tên tài khoản, email, số điện thoại <span>*</span></label>
                                 <input type="text">
                              </p>
                              <p>   
-                                <label>Passwords <span>*</span></label>
+                                <label>Mật khẩu <span>*</span></label>
                                 <input type="password">
                              </p>   
                             <div class="login_submit">
                                <a href="#">Lost your password?</a>
                                 <label for="remember">
                                     <input id="remember" type="checkbox">
-                                    Remember me
+                                    Ghi nhớ đăng nhập
                                 </label>
-                                <button type="submit">login</button>
+                                <button type="submit">Đăng nhập</button>
 
                             </div>
 
@@ -50,18 +50,39 @@
                 <!--register area start-->
                 <div class="col-lg-6 col-md-6">
                     <div class="account_form register">
-                        <h2>Register</h2>
+                        <h2>Đăng ký</h2>
                         <form action="#">
                             <p>   
-                                <label>Email address  <span>*</span></label>
+                                <label>Tên đăng nhập <span>*</span></label>
+                                <input type="text">
+                             </p>
+                            <p>   
+                                <label>Email  <span>*</span></label>
+                                <input type="text">
+                             </p>
+                             
+                             <p>   
+                                <label>Mật khẩu <span>*</span></label>
+                                <input type="password">
+                             </p>
+                             <p>   
+                                <label>Họ tên <span>*</span></label>
                                 <input type="text">
                              </p>
                              <p>   
-                                <label>Passwords <span>*</span></label>
-                                <input type="password">
+                                <label>giới tính </label>
+                                <select class="form-control" name="gioitinh" id=""> 
+                                     <option type="radio" name="gioitinh" value="nam"> nam</option>
+                                    <option type="radio" name="gioitinh" value="nữ"> nữ</option>
+                                    <option type="radio" name="gioitinh" value="khác"> khác</option>
+                                </select>
+                             </p>
+                             <p>   
+                                <label>Ngày sinh</label>
+                                <input type="date" >
                              </p>
                             <div class="login_submit">
-                                <button type="submit">Register</button>
+                                <button type="submit">Đăng ký</button>
                             </div>
                         </form>
                     </div>    
