--- a/src/app/giohang/giohang.component.html
+++ b/src/app/giohang/giohang.component.html
@@ -26,12 +26,12 @@
                                     <table>
                                         <thead>
                                             <tr>
-                                                <th class="product_remove">Delete</th>
-                                                <th class="product_thumb">Image</th>
-                                                <th class="product_name">Product</th>
-                                                <th class="product-price">Price</th>
-                                                <th class="product_quantity">Quantity</th>
-                                                <th class="product_total">Total</th>
+                                                <th class="product_remove">Xóa</th>
+                                                <th class="product_thumb">Hình ảnh</th>
+                                                <th class="product_name">Tên sản phẩm</th>
+                                                <th class="product-price">Đơn giá</th>
+                                                <th class="product_quantity">Số lượng</th>
+                                                <th class="product_total">Thành tiền</th>
                                             </tr>
                                         </thead>
                                         <tbody>
@@ -52,7 +52,7 @@
                                     </table>   
                                 </div>  
                                 <div class="cart_submit">
-                                    <button type="submit">update cart</button>
+                                    <button type="submit">cập nhật giỏ hàng</button>
                                 </div>      
                             </div>
                          </div>
@@ -64,32 +64,32 @@
                                 <div class="coupon_code left">
                                     <h3>Coupon</h3>
                                     <div class="coupon_inner">   
-                                        <p>Enter your coupon code if you have one.</p>                                
+                                        <p>Nhập coupon để được giảm giá.</p>                                
                                         <input placeholder="Coupon code" type="text">
-                                        <button type="submit">Apply coupon</button>
+                                        <button type="submit">Xác nhận</button>
                                     </div>    
                                 </div>
                             </div>
                             <div class="col-lg-6 col-md-6">
                                 <div class="coupon_code right">
-                                    <h3>Cart Totals</h3>
+                                    <h3>Tổng cộng</h3>
                                     <div class="coupon_inner">
                                        <div class="cart_subtotal">
-                                           <p>Subtotal</p>
-                                           <p class="cart_amount">£215.00</p>
+                                           <p>Tổng tiền</p>
+                                           <p class="cart_amount">7 củ</p>
                                        </div>
                                        <div class="cart_subtotal ">
                                            <p>Shipping</p>
-                                           <p class="cart_amount"><span>Flat Rate:</span> £255.00</p>
+                                           <p class="cart_amount"><span></span></p>
                                        </div>
                                        <a href="#">Calculate shipping</a>
 
                                        <div class="cart_subtotal">
-                                           <p>Total</p>
+                                           <p>Tổng cộng</p>
                                            <p class="cart_amount">£215.00</p>
                                        </div>
                                        <div class="checkout_btn">
-                                           <a href="#">Proceed to Checkout</a>
+                                           <a href="#">Tiến hành đặt hàng</a>
                                        </div>
                                     </div>
                                 </div>
