--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -33,10 +33,10 @@
                     </div>
                     <div class="header_top_links">
                         <ul>
-                            <li><a href="login.html">Register</a></li>
-                            <li><a href="login.html">login</a></li>
-                            <li><a href="cart.html">Shopping Cart</a></li>
-                            <li><a href="checkout.html">Checkout</a></li>
+                            <li><a href="login.html">nút</a></li>
+                            <li><a href="login.html">Đăng nhập-đăng ký</a></li>
+                            <li><a href="cart.html">Giỏ hàng</a></li>
+                            <li><a href="checkout.html">Kênh bán hàng</a></li>
                         </ul>
                     </div> 
                     <div class="search_container">
@@ -142,10 +142,10 @@
                                 <a href="my-account.html">my account</a>
                             </li>
                             <li class="menu-item-has-children">
-                                <a href="about.html">About Us</a>
+                                <a href="about.html">Giới thiệu</a>
                             </li>
                             <li class="menu-item-has-children">
-                                <a href="contact.html"> Contact Us</a> 
+                                <a href="contact.html"> </a> 
                             </li>
                         </ul>
                     </div>
@@ -211,10 +211,10 @@
                         <div class="col-lg-8 col-md-7">
                             <div class="header_top_links text-right">
                                 <ul>
-                                    <li><a href="login.html">Register</a></li>
-                                    <li><a href="login.html">login</a></li>
-                                    <li><a href="cart.html">Shopping Cart</a></li>
-                                    <li><a href="checkout.html">Checkout</a></li>
+                                    <li><a href="login.html">Theo dõi đơn hàng</a></li>
+                                    <li><a href="login.html">Đăng nhập-đăng ký</a></li>
+                                    <li><a href="cart.html">Giỏ hàng</a></li>
+                                    <li><a href="checkout.html">Kênh bán hàng</a></li>
                                 </ul>
                             </div>   
                         </div>
@@ -237,7 +237,7 @@
                                 <div class="search_container">
                                     <form action="#">
                                        <div class="hover_category">
-                                            <select class="select_option" name="select" id="categori2">
+                                            <select class="form-control" style="border: none;" name="select" id="categori2">
                                                 <option selected value="1">Tất </option>
                                                 <option value="2">Accessories</option>
                                                 <option value="3">Accessories & More</option>
@@ -279,7 +279,7 @@
                                             <div class="mini_cart_inner">
                                                 <div class="cart_close">
                                                     <div class="cart_text">
-                                                        <h3>cart</h3>
+                                                        <h3>Giỏ hàng của bạn</h3>
                                                     </div>
                                                     <div class="mini_cart_close">
                                                         <a href="javascript:void(0)"><i class="icon-x"></i></a>
@@ -311,21 +311,21 @@
                                                 </div>
                                                 <div class="mini_cart_table">
                                                     <div class="cart_total">
-                                                        <span>Sub total:</span>
+                                                        <span>Tiền:</span>
                                                         <span class="price">$138.00</span>
                                                     </div>
                                                     <div class="cart_total mt-10">
-                                                        <span>total:</span>
+                                                        <span>Tổng cộng:</span>
                                                         <span class="price">$138.00</span>
                                                     </div>
                                                 </div>
                                             </div>
                                             <div class="mini_cart_footer">
                                                <div class="cart_button">
-                                                    <a href="cart.html">View cart</a>
+                                                    <a href="cart.html">Xem giỏ hàng</a>
                                                 </div>
                                                 <div class="cart_button">
-                                                    <a class="active" href="checkout.html">Checkout</a>
+                                                    <a class="active" href="checkout.html">Đặt hàng</a>
                                                 </div>
 
                                             </div>
@@ -461,8 +461,8 @@
                                             </ul>
                                         </li>
 
-                                        <li><a href="about.html">About Us</a></li>
-                                        <li><a href="contact.html"> Contact Us</a></li>
+                                        <li><a href="about.html">Giới thiệu</a></li>
+                                        <li><a href="contact.html"> Liên hệ</a></li><!--this is the one-->
                                     </ul>  
                                 </nav> 
                             </div>
