--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -195,15 +195,13 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="section_title">
-                           <h2><span>our</span> Products</h2>
-                            <p>Consectetuer sociis mauris eu augue velit pulvinar ullamcorper 
-                                in ac mauris ac vel, interdum sed malesuada curae sit amet non nec quis arcu massa. </p>                    
+                           <h2><span>Sản phẩm </span> hot</h2>
                         </div>
                         <div class="product_tab_btn">
                             <ul class="nav" role="tablist">
                                 <li>
                                     <a class="active" data-toggle="tab" href="#Sellers" role="tab" aria-controls="Sellers" aria-selected="true"> 
-                                        Best Sellers
+                                        Khuyến mãi
                                     </a>
                                 </li>
                                 <li>
@@ -213,7 +211,7 @@
                                 </li>
                                 <li>
                                     <a data-toggle="tab" href="#Arrivals" role="tab" aria-controls="Arrivals" aria-selected="false">
-                                       New Arrivals
+                                       Sản phẩm mới
                                     </a>
                                 </li>
                             </ul>
