--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -238,22 +238,8 @@
                                     <form action="#">
                                        <div class="hover_category">
                                             <select class="form-control" style="border: none;" name="select" id="categori2">
-                                                <option selected value="1">Tất </option>
-                                                <option value="2">Accessories</option>
-                                                <option value="3">Accessories & More</option>
-                                                <option value="4">Butters & Eggs</option>
-                                                <option value="5">Camera & Video </option>
-                                                <option value="6">Mornitors</option>
-                                                <option value="7">Tablets</option>
-                                                <option value="8">Laptops</option>
-                                                <option value="9">Handbags</option>
-                                                <option value="10">Headphone & Speaker</option>
-                                                <option value="11">Herbs & botanicals</option>
-                                                <option value="12">Vegetables</option>
-                                                <option value="13">Shop</option>
-                                                <option value="14">Laptops & Desktops</option>
-                                                <option value="15">Watchs</option>
-                                                <option value="16">Electronic</option>
+                                                <option selected value="all">Tất cả danh mục</option>
+                                                <option *ngFor="let item of menus" value="{{item.MaLoai}}">{{item.tenLoai}}</option>
                                             </select>                        
                                        </div>
                                         <div class="search_box">
@@ -351,42 +337,25 @@
                                 </div>
                                 <div class="categories_menu_toggle">
                                     <ul>
-                                        <li class="menu_item_children"><a href="#">Brake Parts <i class="fa fa-angle-right"></i></a>
+                                        <ng-container *ngFor="let mn of menus">
+                                            <ng-container *ngIf="mn.children !=null"> 
+                                        <li  class="menu_item_children"><a routerLink="shop/{{mn.link}}">{{mn.tenLoai}} <i class="fa fa-angle-right"></i></a>
                                             <ul class="categories_mega_menu">
-                                                <li class="menu_item_children"><a href="#">Dresses</a>
+                                                <ng-container *ngFor="let ab of mn.children">
+                                                <li  class="menu_item_children"><b><a routerLink="shop/{{mn.link}}/{{ab.link}}">{{ab.tenLoai}}</a></b>
                                                     <ul class="categorie_sub_menu">
-                                                        <li><a href="#">Sweater</a></li>
-                                                        <li><a href="#">Evening</a></li>
-                                                        <li><a href="#">Day</a></li>
-                                                        <li><a href="#">Sports</a></li>
+                                                        <ng-container *ngFor="let abc of ab.children">
+                                                        <li><a href="#">{{abc.tenLoai}}</a></li>
+                                                    </ng-container>
                                                     </ul>
-                                                </li>
-                                                <li class="menu_item_children"><a href="#">Handbags</a>
-                                                    <ul class="categorie_sub_menu">
-                                                        <li><a href="#">Shoulder</a></li>
-                                                        <li><a href="#">Satchels</a></li>
-                                                        <li><a href="#">kids</a></li>
-                                                        <li><a href="#">coats</a></li>
-                                                    </ul>
-                                                </li>
-                                                <li class="menu_item_children"><a href="#">shoes</a>
-                                                    <ul class="categorie_sub_menu">
-                                                        <li><a href="#">Ankle Boots</a></li>
-                                                        <li><a href="#">Clog sandals </a></li>
-                                                        <li><a href="#">run</a></li>
-                                                        <li><a href="#">Books</a></li>
-                                                    </ul>
-                                                </li>
-                                                <li class="menu_item_children"><a href="#">Clothing</a>
-                                                    <ul class="categorie_sub_menu">
-                                                        <li><a href="#">Coats  Jackets </a></li>
-                                                        <li><a href="#">Raincoats</a></li>
-                                                        <li><a href="#">Jackets</a></li>
-                                                        <li><a href="#">T-shirts</a></li>
-                                                    </ul>
-                                                </li>
+                                                </li></ng-container>
                                             </ul>
                                         </li>
+                                    <ng-container *ngIf="mn.children==null">
+                                        <li ><a routerLink="shop/{{mn.link}}">{{mn.tenLoai}}</a></li>
+                                    </ng-container>
+                                    </ng-container>
+                                    </ng-container>
                                         <li class="hidden"><a href="shop-left-sidebar.html">New Sofas</a></li>
                                         <li class="hidden"><a href="shop-left-sidebar.html">Sleight Sofas</a></li>
                                         <li><a href="#" id="more-btn"><i class="fa fa-plus" aria-hidden="true"></i> More Categories</a></li>
