--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -114,9 +114,9 @@
     <div class="categories_product_area mb-80">
         <div class="container">
             <div class="row">
-                <div class="col-12">
-                    <div class="categories_product_inner categories_column7 owl-carousel">
-                <div class="single_categories_product">
+                <div class="col                    <div class="categories_product_inner categories_column7 owl-carousel" >
+                <div class="single_categories_product" >
+                    
                     <div class="categories_product_thumb">
                         <a href="shop.html"><img src="assets/img/s-product/category1.jpg" alt=""></a>
                     </div>
@@ -132,54 +132,7 @@
                         <h4><a href="shop.html"> Car engine</a></h4>
                     </div>
                 </div>
-                <div class="single_categories_product">
-                    <div class="categories_product_thumb">
-                        <a href="shop.html"><img src="assets/img/s-product/category3.jpg" alt=""></a>
-                    </div>
-                    <div class="categories_product_content">
-                        <h4><a href="shop.html"> Interiors</a></h4>
-                    </div>
-                </div>
-                <div class="single_categories_product">
-                    <div class="categories_product_thumb">
-                        <a href="shop.html"><img src="assets/img/s-product/category4.jpg" alt=""></a>
-                    </div>
-                    <div class="categories_product_content">
-                        <h4><a href="shop.html"> Lighting & lamp</a></h4>
-                    </div>
-                </div>
-                <div class="single_categories_product">
-                    <div class="categories_product_thumb">
-                        <a href="shop.html"><img src="assets/img/s-product/category5.jpg" alt=""></a>
-                    </div>
-                    <div class="categories_product_content">
-                        <h4><a href="shop.html"> Repair Parts</a></h4>
-                    </div>
-                </div>
-                <div class="single_categories_product">
-                    <div class="categories_product_thumb">
-                        <a href="shop.html"><img src="assets/img/s-product/category6.jpg" alt=""></a>
-                    </div>
-                    <div class="categories_product_content">
-                        <h4><a href="shop.html"> Smart Devices</a></h4>
-                    </div>
-                </div>
-                <div class="single_categories_product">
-                    <div class="categories_product_thumb">
-                        <a href="shop.html"><img src="assets/img/s-product/category7.jpg" alt=""></a>
-                    </div>
-                    <div class="categories_product_content">
-                        <h4><a href="shop.html"> Wheels & Tires</a></h4>
-                    </div>
-                </div>
-                <div class="single_categories_product">
-                    <div class="categories_product_thumb">
-                        <a href="shop.html"><img src="assets/img/s-product/category3.jpg" alt=""></a>
-                    </div>
-                    <div class="categories_product_content">
-                        <h4><a href="shop.html"> Smart Devices</a></h4>
-                    </div>
-                </div>
+
             </div>
                 </div>
             </div>
