--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -335,17 +335,17 @@
                                 <div class="categories_title">
                                     <h2 class="categori_toggle">Danh mục sản phẩm</h2>
                                 </div>
-                                <div class="categories_menu_toggle">
+                                <div class="categories_menu_toggle" >
                                     <ul>
                                         <ng-container *ngFor="let mn of menus">
                                             <ng-container *ngIf="mn.children !=null"> 
                                         <li  class="menu_item_children"><a routerLink="shop/{{mn.link}}">{{mn.tenLoai}} <i class="fa fa-angle-right"></i></a>
-                                            <ul class="categories_mega_menu">
+                                            <ul class="categories_mega_menu" style="width:1000px">
                                                 <ng-container *ngFor="let ab of mn.children">
                                                 <li  class="menu_item_children"><b><a routerLink="shop/{{mn.link}}/{{ab.link}}">{{ab.tenLoai}}</a></b>
                                                     <ul class="categorie_sub_menu">
                                                         <ng-container *ngFor="let abc of ab.children">
-                                                        <li><a href="#">{{abc.tenLoai}}</a></li>
+                                                        <li><a href="shop/{{mn.link}}/{{ab.link}}/{{abc.link}}">{{abc.tenLoai}}</a></li>
                                                     </ng-container>
                                                     </ul>
                                                 </li></ng-container>
@@ -375,37 +375,20 @@
                                                 <li><a href="index-4.html">Home shop 4</a></li>
                                             </ul>
                                         </li>
-                                        <li class="mega_items"><a href="shop.html">shop<i class="fa fa-angle-down"></i></a> 
-                                            <div class="mega_menu">
+                                        <li class="mega_items"><a href="#">Shop<i class="fa fa-angle-down"></i></a> 
+                                            <div class="mega_menu" >
                                                 <ul class="mega_menu_inner">
-                                                    <li><a href="#">Shop Layouts</a>
-                                                        <ul>
+                                                    <ng-container >
+                                                    <li><a href="#">ahjhj</a>
+                                                        <!-- <ul>
                                                             <li><a href="shop-fullwidth.html">Full Width</a></li>
                                                             <li><a href="shop-fullwidth-list.html">Full Width list</a></li>
                                                             <li><a href="shop-right-sidebar.html">Right Sidebar </a></li>
                                                             <li><a href="shop-right-sidebar-list.html"> Right Sidebar list</a></li>
                                                             <li><a href="shop-list.html">List View</a></li>
-                                                        </ul>
+                                                        </ul> -->
                                                     </li>
-                                                    <li><a href="#">other Pages</a>
-                                                        <ul>
-                                                            <li><a href="cart.html">cart</a></li>
-                                                            <li><a href="wishlist.html">Wishlist</a></li>
-                                                            <li><a href="checkout.html">Checkout</a></li>
-                                                            <li><a href="my-account.html">my account</a></li>
-                                                            <li><a href="404.html">Error 404</a></li>
-                                                        </ul>
-                                                    </li>
-                                                    <li><a href="#">Product Types</a>
-                                                        <ul>
-                                                            <li><a href="product-details.html">product details</a></li>
-                                                            <li><a href="product-sidebar.html">product sidebar</a></li>
-                                                            <li><a href="product-grouped.html">product grouped</a></li>
-                                                            <li><a href="variable-product.html">product variable</a></li>
-                                                            <li><a href="product-countdown.html">product countdown</a></li>
-
-                                                        </ul>
-                                                    </li>
+                                                </ng-container>
                                                 </ul>
                                             </div>
                                         </li>
