--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -114,7 +114,8 @@
     <div class="categories_product_area mb-80">
         <div class="container">
             <div class="row">
-                <div class="col                    <div class="categories_product_inner categories_column7 owl-carousel" >
+                <div class="col-12">
+                    <div class="categories_product_inner categories_column7 owl-carousel" >
                 <div class="single_categories_product" >
                     
                     <div class="categories_product_thumb">
